crates/yul/tests/snapshots/snapshots__data_type_storage_full.snap
---
source: crates/yul/tests/snapshots.rs
expression: render_fixture(&fixture)
---
object "DataTypeStorageFullDeploy" {
  code {
    function usr$main_DataTypeStorageFull__start_d1108d95f() {
      mstore(64, memoryguard(128))
      if lt(codesize(), datasize("DataTypeStorageFullDeploy")) {
        revert(0, 0)
      }
      if callvalue() {
        mstore(0, 0xb5988ea3)
        revert(28, 4)
      }
      let asm$size_0 := datasize("DataTypeStorageFull")
      codecopy(0, dataoffset("DataTypeStorageFull"), datasize("DataTypeStorageFull"))
      return(0, asm$size_0)
    }
    usr$main_DataTypeStorageFull__start_d1108d95f()
  }
  object "DataTypeStorageFull" {
    code {
      function usr$main_DataTypeStorageFull_main_dd6d1ea2d() -> gen$result_1 {
        let src$inner_2
        let _v0
        _v0 := sload(0)
        src$inner_2 := _v0
        gen$result_1 := src$inner_2
        leave
      }
      let _v1
      _v1 := usr$main_DataTypeStorageFull_main_dd6d1ea2d()
    }
  }
}
