crates/yul/tests/snapshots/snapshots__doc_add1_yul_snapshot.snap
---
source: crates/yul/tests/snapshots.rs
expression: render_fixture(&fixture)
---
object "Add1Deploy" {
  code {
    function usr$Add1_Add1__start_dbcd1f6ef() {
      mstore(64, memoryguard(128))
      if lt(codesize(), datasize("Add1Deploy")) {
        revert(0, 0)
      }
      if callvalue() {
        mstore(0, 0xb5988ea3)
        revert(28, 4)
      }
      let asm$size_0 := datasize("Add1")
      codecopy(0, dataoffset("Add1"), datasize("Add1"))
      return(0, asm$size_0)
    }
    usr$Add1_Add1__start_dbcd1f6ef()
  }
  object "Add1" {
    code {
      function usr$Add1_Add1_main_d117a093c() -> gen$result_1 {
        let src$res_2
        src$res_2 := add(40, 2)
        gen$result_1 := 42
        leave
      }
      let _v0
      _v0 := usr$Add1_Add1_main_d117a093c()
    }
  }
}
