crates/yul/tests/snapshots/snapshots__doc_color.snap
---
source: crates/yul/tests/snapshots.rs
expression: render_fixture(&fixture)
---
object "RGBDeploy" {
  code {
    mstore(64, memoryguard(128))
    if lt(codesize(), datasize("RGBDeploy")) {
      revert(0, 0)
    }
    if callvalue() {
      mstore(0, 0xb5988ea3)
      revert(28, 4)
    }
    let size := datasize("RGB")
    codecopy(0, dataoffset("RGB"), datasize("RGB"))
    return(0, size)
  }
  object "RGB" {
    code {
      function usr$047rgb_RGB_main_d9bbcf828() -> _result {
        switch true
          case false {
            /* R */
            _result := 4
            leave
          }
          case true {
            switch true
              case false {
                /* G */
                _result := 2
                leave
              }
              case true {
                {
                  /* B */
                  _result := 42
                  leave
                }
              }
          }
      }
      /* selector 0xdffeadd0 -> 047rgb_RGB_main_d9bbcf828 */
      mstore(0x40, memoryguard(128))
      let _v0
      _v0 := calldatasize()
      let _v1
      _v1 := lt(_v0, 4)
      switch _v1
        case true {
          if callvalue() {
            mstore(0, 0xb5988ea3)
            revert(28, 4)
          }
          mstore(0, 0x4924aef0)
          revert(28, 4)
        }
        case false {
          let RGB_dispatch_selector
          RGB_dispatch_selector := shr(224, calldataload(0))
          switch RGB_dispatch_selector
            case 0xdffeadd0 {
              if callvalue() {
                mstore(0, 0xb5988ea3)
                revert(28, 4)
              }
              let dispatch_ret0
              let _v2
              _v2 := usr$047rgb_RGB_main_d9bbcf828()
              dispatch_ret0 := _v2
              let dispatch_ret0_0
              dispatch_ret0_0 := dispatch_ret0
              mstore(0, dispatch_ret0_0)
              return(0, 32)
            }
            default {
              if callvalue() {
                mstore(0, 0xb5988ea3)
                revert(28, 4)
              }
              mstore(0, 0x4924aef0)
              revert(28, 4)
            }
        }
    }
  }
}
