crates/yul/tests/snapshots/snapshots__doc_color_yul_snapshot.snap
---
source: crates/yul/tests/snapshots.rs
expression: render_fixture(&fixture)
---
object "RGBDeploy" {
  code {
    mstore(64, memoryguard(128))
    if lt(codesize(), datasize("RGBDeploy")) {
      revert(0, 0)
    }
    if callvalue() {
      mstore(0, 0xb5988ea3)
      revert(28, 4)
    }
    let asm$size_0 := datasize("RGB")
    codecopy(0, dataoffset("RGB"), datasize("RGB"))
    return(0, asm$size_0)
  }
  object "RGB" {
    code {
      function usr$047rgb_RGB_main_d0a7ed26d() -> gen$result_1 {
        gen$result_1 := 42
        leave
      }
      let _v0
      _v0 := usr$047rgb_RGB_main_d0a7ed26d()
    }
  }
}
