crates/yul/tests/snapshots/snapshots__doc_id.snap
---
source: crates/yul/tests/snapshots.rs
expression: "render_source(\"doc_id\",\nr#\"\ncontract IdDoc {\n  public function id(x : word) -> word {\n    return x;\n  }\n}\n\"#,)"
---
object "IdDocDeploy" {
  code {
    mstore(64, memoryguard(128))
    if lt(codesize(), datasize("IdDocDeploy")) {
      revert(0, 0)
    }
    if callvalue() {
      mstore(0, 0xb5988ea3)
      revert(28, 4)
    }
    let size := datasize("IdDoc")
    codecopy(0, dataoffset("IdDoc"), datasize("IdDoc"))
    return(0, size)
  }
  object "IdDoc" {
    code {
      function usr$doc_id_IdDoc_id_de5a55c43(x) -> _result {
        _result := x
        leave
      }
      /* selector 0x7d3c40c8 -> doc_id_IdDoc_id_de5a55c43 */
      mstore(0x40, memoryguard(128))
      let _v0
      _v0 := calldatasize()
      let _v1
      _v1 := lt(_v0, 4)
      switch _v1
        case true {
          if callvalue() {
            mstore(0, 0xb5988ea3)
            revert(28, 4)
          }
          mstore(0, 0x4924aef0)
          revert(28, 4)
        }
        case false {
          let IdDoc_dispatch_selector
          IdDoc_dispatch_selector := shr(224, calldataload(0))
          switch IdDoc_dispatch_selector
            case 0x7d3c40c8 {
              if callvalue() {
                mstore(0, 0xb5988ea3)
                revert(28, 4)
              }
              if lt(calldatasize(), 36) {
                mstore(0, 0x08638556)
                revert(28, 4)
              }
              let dispatch_arg0_0
              dispatch_arg0_0 := calldataload(4)
              let dispatch_ret0
              let _v2
              _v2 := usr$doc_id_IdDoc_id_de5a55c43(dispatch_arg0_0)
              dispatch_ret0 := _v2
              let dispatch_ret0_0
              dispatch_ret0_0 := dispatch_ret0
              mstore(0, dispatch_ret0_0)
              return(0, 32)
            }
            default {
              if callvalue() {
                mstore(0, 0xb5988ea3)
                revert(28, 4)
              }
              mstore(0, 0x4924aef0)
              revert(28, 4)
            }
        }
    }
  }
}
