crates/yul/tests/snapshots/snapshots__doc_option_maybe.snap
---
source: crates/yul/tests/snapshots.rs
expression: "render_source(\"doc_option_maybe\",\nr#\"\ncontract OptionDoc {\n  enum Option<a> { None, Some(a) }\n\n  function maybe(n: word, o: Option<word>) returns (word) {\n    match (o) { case Option.None { return n; } case Option.Some(x) { return x; } }\n  }\n\n  function main() public returns (word) {\n    return maybe(0, Option.Some(42));\n  }\n}\n\"#,)"
---
object "OptionDocDeploy" {
  code {
    function usr$doc_option_maybe_OptionDoc__start_d152c2b55() {
      mstore(64, memoryguard(128))
      if lt(codesize(), datasize("OptionDocDeploy")) {
        revert(0, 0)
      }
      if callvalue() {
        mstore(0, 0xb5988ea3)
        revert(28, 4)
      }
      let asm$size_0 := datasize("OptionDoc")
      codecopy(0, dataoffset("OptionDoc"), datasize("OptionDoc"))
      return(0, asm$size_0)
    }
    usr$doc_option_maybe_OptionDoc__start_d152c2b55()
  }
  object "OptionDoc" {
    code {
      function usr$doc_option_maybe_OptionDoc_main_d383edd09() -> gen$result_1 {
        gen$result_1 := 42
        leave
      }
      let _v0
      _v0 := usr$doc_option_maybe_OptionDoc_main_d383edd09()
    }
  }
}
