crates/yul/tests/snapshots/snapshots__ink_binary_sum_preserves_nested_layout.snap
---
source: crates/yul/tests/snapshots.rs
expression: "solcore_yul::render_hull_program(&db, &program).expect(\"Yul translation\")"
---
object "InkBinarySum" {
  code {
    function usr$pick_third() -> _v0, _v1 {
      _v0 := true
      _v1 := true
      leave
    }
  }
}
