crates/yul/tests/snapshots/snapshots__top_level_no_object_hull_wraps_like_assemble_hs.snap
---
source: crates/yul/tests/snapshots.rs
expression: "solcore_yul::render_hull_program(&db, &program).expect(\"Yul translation\")"
---
object "OutputDeploy" {
  code {
  }
  object "Output" {
    code {
      function usr$main() -> gen$result_0 {
        gen$result_0 := 42
        leave
      }
      let _mainresult := usr$main()
      {
        mstore(0, _mainresult)
        return(0, 32)
      }
    }
  }
}
